// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rollup writes cva file "default \`styleConfig\`" 1`] = `
"@layer components {
  .button {
    @apply rounded-full;
  }

  .button.button__intent--primary,
  .button.button__size--medium {
    @apply uppercase;
  }

  .button.button__intent--primary {
    @apply bg-blue-500 text-white border-transparent hover:bg-blue-600;
  }

  .button.button__intent--secondary {
    @apply bg-white text-gray-800 border-gray-400 hover:bg-gray-100;
  }

  .button.button__size--small {
    @apply text-sm py-1 px-2;
  }

  .button.button__size--medium {
    @apply text-base py-2 px-4;
  }
}
"
`;

exports[`rollup writes cva file "default \`styleConfig\`" 2`] = `
"@import "./button.css";
"
`;

exports[`rollup writes cva file "with \`createOptions.prefix\`" 1`] = `
"@layer components {
  .jg\\:button {
    @apply rounded-full;
  }

  .jg\\:button.jg\\:button__intent--primary,
  .jg\\:button.jg\\:button__size--medium {
    @apply uppercase;
  }

  .jg\\:button.jg\\:button__intent--primary {
    @apply bg-blue-500 text-white border-transparent hover:bg-blue-600;
  }

  .jg\\:button.jg\\:button__intent--secondary {
    @apply bg-white text-gray-800 border-gray-400 hover:bg-gray-100;
  }

  .jg\\:button.jg\\:button__size--small {
    @apply text-sm py-1 px-2;
  }

  .jg\\:button.jg\\:button__size--medium {
    @apply text-base py-2 px-4;
  }
}
"
`;

exports[`rollup writes cva file "with \`createOptions.prefix\`" 2`] = `
"@import "./button.css";
"
`;

exports[`rollup writes cva file "with \`createOptions.mergeFn\`" 1`] = `
"@layer components {
  .button {
    @apply rounded-full;
  }

  .button.button__intent--primary,
  .button.button__size--medium {
    @apply uppercase;
  }
}
"
`;

exports[`rollup writes cva file "with \`createOptions.mergeFn\`" 2`] = `
"@import "./button.css";
"
`;

exports[`rollup writes cva file "with \`createOptions.prefix\` and \`createOptions.mergeFn\`" 1`] = `
"@layer components {
  .jg\\:button {
    @apply rounded-full;
  }

  .jg\\:button.jg\\:button__intent--primary,
  .jg\\:button.jg\\:button__size--medium {
    @apply uppercase;
  }
}
"
`;

exports[`rollup writes cva file "with \`createOptions.prefix\` and \`createOptions.mergeFn\`" 2`] = `
"@import "./button.css";
"
`;

exports[`rollup writes sva file "default \`styleConfig\`" 1`] = `
"@layer components {
  .alert--root,
  .alert--title,
  .alert--message {
    @apply flex flex-wrap truncate box-border outline-none items-center justify-center bg-neutral-100 hover:bg-neutral-200 active:bg-neutral-300 text-neutral-500;
  }

  .alert--root__size--xs,
  .alert--title__size--xs,
  .alert--message__size--xs {
    @apply w-7 h-7 text-xs;
  }

  .alert--root__size--sm,
  .alert--title__size--sm,
  .alert--message__size--sm {
    @apply w-8 h-8 text-sm;
  }

  .alert--root__size--md,
  .alert--title__size--md,
  .alert--message__size--md {
    @apply w-9 h-9 text-base;
  }

  .alert--root {
    @apply rounded py-3 px-5 mb-4;
  }

  .alert--title {
    @apply font-bold mb-1;
  }

  .alert--root.alert--root__variant--outlined.alert--root__severity--error {
    @apply border-red-700 dark:border-red-500;
  }

  .alert--title.alert--title__variant--outlined.alert--title__severity--error {
    @apply text-red-700 dark:text-red-500;
  }

  .alert--message.alert--message__variant--outlined.alert--message__severity--error {
    @apply text-red-600 dark:text-red-500;
  }

  .alert--root.alert--root__variant--outlined.alert--root__severity--success {
    @apply border-green-700 dark:border-green-500;
  }

  .alert--title.alert--title__variant--outlined.alert--title__severity--success {
    @apply text-green-700 dark:text-green-500;
  }

  .alert--message.alert--message__variant--outlined.alert--message__severity--success {
    @apply text-green-600 dark:text-green-500;
  }

  .alert--root.alert--root__variant--filled.alert--root__severity--error {
    @apply bg-red-100 dark:bg-red-800;
  }

  .alert--title.alert--title__variant--filled.alert--title__severity--error {
    @apply text-red-900 dark:text-red-50;
  }

  .alert--message.alert--message__variant--filled.alert--message__severity--error {
    @apply text-red-700 dark:text-red-200;
  }

  .alert--root.alert--root__variant--filled.alert--root__severity--success {
    @apply bg-green-100 dark:bg-green-800;
  }

  .alert--title.alert--title__variant--filled.alert--title__severity--success {
    @apply text-green-900 dark:text-green-50;
  }

  .alert--message.alert--message__variant--filled.alert--message__severity--success {
    @apply text-green-700 dark:text-green-200;
  }

  .alert--root.alert--root__variant--outlined {
    @apply border;
  }
}
"
`;

exports[`rollup writes sva file "default \`styleConfig\`" 2`] = `
"@import "./alert.css";
"
`;

exports[`rollup writes sva file "with \`createOptions.prefix\`" 1`] = `
"@layer components {
  .jg\\:alert--root,
  .jg\\:alert--title,
  .jg\\:alert--message {
    @apply flex flex-wrap truncate box-border outline-none items-center justify-center bg-neutral-100 hover:bg-neutral-200 active:bg-neutral-300 text-neutral-500;
  }

  .jg\\:alert--root__size--xs,
  .jg\\:alert--title__size--xs,
  .jg\\:alert--message__size--xs {
    @apply w-7 h-7 text-xs;
  }

  .jg\\:alert--root__size--sm,
  .jg\\:alert--title__size--sm,
  .jg\\:alert--message__size--sm {
    @apply w-8 h-8 text-sm;
  }

  .jg\\:alert--root__size--md,
  .jg\\:alert--title__size--md,
  .jg\\:alert--message__size--md {
    @apply w-9 h-9 text-base;
  }

  .jg\\:alert--root {
    @apply rounded py-3 px-5 mb-4;
  }

  .jg\\:alert--title {
    @apply font-bold mb-1;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined.jg\\:alert--root__severity--error {
    @apply border-red-700 dark:border-red-500;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--outlined.jg\\:alert--title__severity--error {
    @apply text-red-700 dark:text-red-500;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--outlined.jg\\:alert--message__severity--error {
    @apply text-red-600 dark:text-red-500;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined.jg\\:alert--root__severity--success {
    @apply border-green-700 dark:border-green-500;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--outlined.jg\\:alert--title__severity--success {
    @apply text-green-700 dark:text-green-500;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--outlined.jg\\:alert--message__severity--success {
    @apply text-green-600 dark:text-green-500;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--filled.jg\\:alert--root__severity--error {
    @apply bg-red-100 dark:bg-red-800;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--filled.jg\\:alert--title__severity--error {
    @apply text-red-900 dark:text-red-50;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--filled.jg\\:alert--message__severity--error {
    @apply text-red-700 dark:text-red-200;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--filled.jg\\:alert--root__severity--success {
    @apply bg-green-100 dark:bg-green-800;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--filled.jg\\:alert--title__severity--success {
    @apply text-green-900 dark:text-green-50;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--filled.jg\\:alert--message__severity--success {
    @apply text-green-700 dark:text-green-200;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined {
    @apply border;
  }
}
"
`;

exports[`rollup writes sva file "with \`createOptions.prefix\`" 2`] = `
"@import "./alert.css";
"
`;

exports[`rollup writes sva file "with \`createOptions.mergeFn\`" 1`] = `
"@layer components {
  .alert--root__size--xs,
  .alert--title__size--xs,
  .alert--message__size--xs {
    @apply w-7 h-7 text-xs;
  }

  .alert--root__size--sm,
  .alert--title__size--sm,
  .alert--message__size--sm {
    @apply w-8 h-8 text-sm;
  }

  .alert--root__size--md,
  .alert--title__size--md,
  .alert--message__size--md {
    @apply w-9 h-9 text-base;
  }

  .alert--root {
    @apply rounded py-3 px-5 mb-4;
  }

  .alert--title {
    @apply font-bold mb-1;
  }

  .alert--root.alert--root__variant--outlined.alert--root__severity--error {
    @apply border-red-700 dark:border-red-500;
  }

  .alert--title.alert--title__variant--outlined.alert--title__severity--error {
    @apply text-red-700 dark:text-red-500;
  }

  .alert--message.alert--message__variant--outlined.alert--message__severity--error {
    @apply text-red-600 dark:text-red-500;
  }

  .alert--root.alert--root__variant--outlined.alert--root__severity--success {
    @apply border-green-700 dark:border-green-500;
  }

  .alert--title.alert--title__variant--outlined.alert--title__severity--success {
    @apply text-green-700 dark:text-green-500;
  }

  .alert--message.alert--message__variant--outlined.alert--message__severity--success {
    @apply text-green-600 dark:text-green-500;
  }

  .alert--root.alert--root__variant--filled.alert--root__severity--error {
    @apply bg-red-100 dark:bg-red-800;
  }

  .alert--title.alert--title__variant--filled.alert--title__severity--error {
    @apply text-red-900 dark:text-red-50;
  }

  .alert--message.alert--message__variant--filled.alert--message__severity--error {
    @apply text-red-700 dark:text-red-200;
  }

  .alert--root.alert--root__variant--filled.alert--root__severity--success {
    @apply bg-green-100 dark:bg-green-800;
  }

  .alert--title.alert--title__variant--filled.alert--title__severity--success {
    @apply text-green-900 dark:text-green-50;
  }

  .alert--message.alert--message__variant--filled.alert--message__severity--success {
    @apply text-green-700 dark:text-green-200;
  }

  .alert--root.alert--root__variant--outlined {
    @apply border;
  }
}
"
`;

exports[`rollup writes sva file "with \`createOptions.mergeFn\`" 2`] = `
"@import "./alert.css";
"
`;

exports[`rollup writes sva file "with \`createOptions.prefix\` and \`createOptions.mergeFn\`" 1`] = `
"@layer components {
  .jg\\:alert--root__size--xs,
  .jg\\:alert--title__size--xs,
  .jg\\:alert--message__size--xs {
    @apply w-7 h-7 text-xs;
  }

  .jg\\:alert--root__size--sm,
  .jg\\:alert--title__size--sm,
  .jg\\:alert--message__size--sm {
    @apply w-8 h-8 text-sm;
  }

  .jg\\:alert--root__size--md,
  .jg\\:alert--title__size--md,
  .jg\\:alert--message__size--md {
    @apply w-9 h-9 text-base;
  }

  .jg\\:alert--root {
    @apply rounded py-3 px-5 mb-4;
  }

  .jg\\:alert--title {
    @apply font-bold mb-1;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined.jg\\:alert--root__severity--error {
    @apply border-red-700 dark:border-red-500;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--outlined.jg\\:alert--title__severity--error {
    @apply text-red-700 dark:text-red-500;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--outlined.jg\\:alert--message__severity--error {
    @apply text-red-600 dark:text-red-500;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined.jg\\:alert--root__severity--success {
    @apply border-green-700 dark:border-green-500;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--outlined.jg\\:alert--title__severity--success {
    @apply text-green-700 dark:text-green-500;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--outlined.jg\\:alert--message__severity--success {
    @apply text-green-600 dark:text-green-500;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--filled.jg\\:alert--root__severity--error {
    @apply bg-red-100 dark:bg-red-800;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--filled.jg\\:alert--title__severity--error {
    @apply text-red-900 dark:text-red-50;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--filled.jg\\:alert--message__severity--error {
    @apply text-red-700 dark:text-red-200;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--filled.jg\\:alert--root__severity--success {
    @apply bg-green-100 dark:bg-green-800;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--filled.jg\\:alert--title__severity--success {
    @apply text-green-900 dark:text-green-50;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--filled.jg\\:alert--message__severity--success {
    @apply text-green-700 dark:text-green-200;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined {
    @apply border;
  }
}
"
`;

exports[`rollup writes sva file "with \`createOptions.prefix\` and \`createOptions.mergeFn\`" 2`] = `
"@import "./alert.css";
"
`;

exports[`rollup writes cva and sva files "default \`styleConfig\`" 1`] = `
"@layer components {
  .alert--root,
  .alert--title,
  .alert--message {
    @apply flex flex-wrap truncate box-border outline-none items-center justify-center bg-neutral-100 hover:bg-neutral-200 active:bg-neutral-300 text-neutral-500;
  }

  .alert--root__size--xs,
  .alert--title__size--xs,
  .alert--message__size--xs {
    @apply w-7 h-7 text-xs;
  }

  .alert--root__size--sm,
  .alert--title__size--sm,
  .alert--message__size--sm {
    @apply w-8 h-8 text-sm;
  }

  .alert--root__size--md,
  .alert--title__size--md,
  .alert--message__size--md {
    @apply w-9 h-9 text-base;
  }

  .alert--root {
    @apply rounded py-3 px-5 mb-4;
  }

  .alert--title {
    @apply font-bold mb-1;
  }

  .alert--root.alert--root__variant--outlined.alert--root__severity--error {
    @apply border-red-700 dark:border-red-500;
  }

  .alert--title.alert--title__variant--outlined.alert--title__severity--error {
    @apply text-red-700 dark:text-red-500;
  }

  .alert--message.alert--message__variant--outlined.alert--message__severity--error {
    @apply text-red-600 dark:text-red-500;
  }

  .alert--root.alert--root__variant--outlined.alert--root__severity--success {
    @apply border-green-700 dark:border-green-500;
  }

  .alert--title.alert--title__variant--outlined.alert--title__severity--success {
    @apply text-green-700 dark:text-green-500;
  }

  .alert--message.alert--message__variant--outlined.alert--message__severity--success {
    @apply text-green-600 dark:text-green-500;
  }

  .alert--root.alert--root__variant--filled.alert--root__severity--error {
    @apply bg-red-100 dark:bg-red-800;
  }

  .alert--title.alert--title__variant--filled.alert--title__severity--error {
    @apply text-red-900 dark:text-red-50;
  }

  .alert--message.alert--message__variant--filled.alert--message__severity--error {
    @apply text-red-700 dark:text-red-200;
  }

  .alert--root.alert--root__variant--filled.alert--root__severity--success {
    @apply bg-green-100 dark:bg-green-800;
  }

  .alert--title.alert--title__variant--filled.alert--title__severity--success {
    @apply text-green-900 dark:text-green-50;
  }

  .alert--message.alert--message__variant--filled.alert--message__severity--success {
    @apply text-green-700 dark:text-green-200;
  }

  .alert--root.alert--root__variant--outlined {
    @apply border;
  }
}
"
`;

exports[`rollup writes cva and sva files "default \`styleConfig\`" 2`] = `
"@layer components {
  .button {
    @apply rounded-full;
  }

  .button.button__intent--primary,
  .button.button__size--medium {
    @apply uppercase;
  }

  .button.button__intent--primary {
    @apply bg-blue-500 text-white border-transparent hover:bg-blue-600;
  }

  .button.button__intent--secondary {
    @apply bg-white text-gray-800 border-gray-400 hover:bg-gray-100;
  }

  .button.button__size--small {
    @apply text-sm py-1 px-2;
  }

  .button.button__size--medium {
    @apply text-base py-2 px-4;
  }
}
"
`;

exports[`rollup writes cva and sva files "default \`styleConfig\`" 3`] = `
"@import "./alert.css";
@import "./button.css";
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.prefix\`" 1`] = `
"@layer components {
  .jg\\:alert--root,
  .jg\\:alert--title,
  .jg\\:alert--message {
    @apply flex flex-wrap truncate box-border outline-none items-center justify-center bg-neutral-100 hover:bg-neutral-200 active:bg-neutral-300 text-neutral-500;
  }

  .jg\\:alert--root__size--xs,
  .jg\\:alert--title__size--xs,
  .jg\\:alert--message__size--xs {
    @apply w-7 h-7 text-xs;
  }

  .jg\\:alert--root__size--sm,
  .jg\\:alert--title__size--sm,
  .jg\\:alert--message__size--sm {
    @apply w-8 h-8 text-sm;
  }

  .jg\\:alert--root__size--md,
  .jg\\:alert--title__size--md,
  .jg\\:alert--message__size--md {
    @apply w-9 h-9 text-base;
  }

  .jg\\:alert--root {
    @apply rounded py-3 px-5 mb-4;
  }

  .jg\\:alert--title {
    @apply font-bold mb-1;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined.jg\\:alert--root__severity--error {
    @apply border-red-700 dark:border-red-500;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--outlined.jg\\:alert--title__severity--error {
    @apply text-red-700 dark:text-red-500;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--outlined.jg\\:alert--message__severity--error {
    @apply text-red-600 dark:text-red-500;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined.jg\\:alert--root__severity--success {
    @apply border-green-700 dark:border-green-500;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--outlined.jg\\:alert--title__severity--success {
    @apply text-green-700 dark:text-green-500;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--outlined.jg\\:alert--message__severity--success {
    @apply text-green-600 dark:text-green-500;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--filled.jg\\:alert--root__severity--error {
    @apply bg-red-100 dark:bg-red-800;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--filled.jg\\:alert--title__severity--error {
    @apply text-red-900 dark:text-red-50;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--filled.jg\\:alert--message__severity--error {
    @apply text-red-700 dark:text-red-200;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--filled.jg\\:alert--root__severity--success {
    @apply bg-green-100 dark:bg-green-800;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--filled.jg\\:alert--title__severity--success {
    @apply text-green-900 dark:text-green-50;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--filled.jg\\:alert--message__severity--success {
    @apply text-green-700 dark:text-green-200;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined {
    @apply border;
  }
}
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.prefix\`" 2`] = `
"@layer components {
  .jg\\:button {
    @apply rounded-full;
  }

  .jg\\:button.jg\\:button__intent--primary,
  .jg\\:button.jg\\:button__size--medium {
    @apply uppercase;
  }

  .jg\\:button.jg\\:button__intent--primary {
    @apply bg-blue-500 text-white border-transparent hover:bg-blue-600;
  }

  .jg\\:button.jg\\:button__intent--secondary {
    @apply bg-white text-gray-800 border-gray-400 hover:bg-gray-100;
  }

  .jg\\:button.jg\\:button__size--small {
    @apply text-sm py-1 px-2;
  }

  .jg\\:button.jg\\:button__size--medium {
    @apply text-base py-2 px-4;
  }
}
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.prefix\`" 3`] = `
"@import "./alert.css";
@import "./button.css";
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.mergeFn\`" 1`] = `
"@layer components {
  .alert--root__size--xs,
  .alert--title__size--xs,
  .alert--message__size--xs {
    @apply w-7 h-7 text-xs;
  }

  .alert--root__size--sm,
  .alert--title__size--sm,
  .alert--message__size--sm {
    @apply w-8 h-8 text-sm;
  }

  .alert--root__size--md,
  .alert--title__size--md,
  .alert--message__size--md {
    @apply w-9 h-9 text-base;
  }

  .alert--root {
    @apply rounded py-3 px-5 mb-4;
  }

  .alert--title {
    @apply font-bold mb-1;
  }

  .alert--root.alert--root__variant--outlined.alert--root__severity--error {
    @apply border-red-700 dark:border-red-500;
  }

  .alert--title.alert--title__variant--outlined.alert--title__severity--error {
    @apply text-red-700 dark:text-red-500;
  }

  .alert--message.alert--message__variant--outlined.alert--message__severity--error {
    @apply text-red-600 dark:text-red-500;
  }

  .alert--root.alert--root__variant--outlined.alert--root__severity--success {
    @apply border-green-700 dark:border-green-500;
  }

  .alert--title.alert--title__variant--outlined.alert--title__severity--success {
    @apply text-green-700 dark:text-green-500;
  }

  .alert--message.alert--message__variant--outlined.alert--message__severity--success {
    @apply text-green-600 dark:text-green-500;
  }

  .alert--root.alert--root__variant--filled.alert--root__severity--error {
    @apply bg-red-100 dark:bg-red-800;
  }

  .alert--title.alert--title__variant--filled.alert--title__severity--error {
    @apply text-red-900 dark:text-red-50;
  }

  .alert--message.alert--message__variant--filled.alert--message__severity--error {
    @apply text-red-700 dark:text-red-200;
  }

  .alert--root.alert--root__variant--filled.alert--root__severity--success {
    @apply bg-green-100 dark:bg-green-800;
  }

  .alert--title.alert--title__variant--filled.alert--title__severity--success {
    @apply text-green-900 dark:text-green-50;
  }

  .alert--message.alert--message__variant--filled.alert--message__severity--success {
    @apply text-green-700 dark:text-green-200;
  }

  .alert--root.alert--root__variant--outlined {
    @apply border;
  }
}
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.mergeFn\`" 2`] = `
"@layer components {
  .button {
    @apply rounded-full;
  }

  .button.button__intent--primary,
  .button.button__size--medium {
    @apply uppercase;
  }
}
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.mergeFn\`" 3`] = `
"@import "./alert.css";
@import "./button.css";
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.prefix\` and \`createOptions.mergeFn\`" 1`] = `
"@layer components {
  .jg\\:alert--root__size--xs,
  .jg\\:alert--title__size--xs,
  .jg\\:alert--message__size--xs {
    @apply w-7 h-7 text-xs;
  }

  .jg\\:alert--root__size--sm,
  .jg\\:alert--title__size--sm,
  .jg\\:alert--message__size--sm {
    @apply w-8 h-8 text-sm;
  }

  .jg\\:alert--root__size--md,
  .jg\\:alert--title__size--md,
  .jg\\:alert--message__size--md {
    @apply w-9 h-9 text-base;
  }

  .jg\\:alert--root {
    @apply rounded py-3 px-5 mb-4;
  }

  .jg\\:alert--title {
    @apply font-bold mb-1;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined.jg\\:alert--root__severity--error {
    @apply border-red-700 dark:border-red-500;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--outlined.jg\\:alert--title__severity--error {
    @apply text-red-700 dark:text-red-500;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--outlined.jg\\:alert--message__severity--error {
    @apply text-red-600 dark:text-red-500;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined.jg\\:alert--root__severity--success {
    @apply border-green-700 dark:border-green-500;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--outlined.jg\\:alert--title__severity--success {
    @apply text-green-700 dark:text-green-500;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--outlined.jg\\:alert--message__severity--success {
    @apply text-green-600 dark:text-green-500;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--filled.jg\\:alert--root__severity--error {
    @apply bg-red-100 dark:bg-red-800;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--filled.jg\\:alert--title__severity--error {
    @apply text-red-900 dark:text-red-50;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--filled.jg\\:alert--message__severity--error {
    @apply text-red-700 dark:text-red-200;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--filled.jg\\:alert--root__severity--success {
    @apply bg-green-100 dark:bg-green-800;
  }

  .jg\\:alert--title.jg\\:alert--title__variant--filled.jg\\:alert--title__severity--success {
    @apply text-green-900 dark:text-green-50;
  }

  .jg\\:alert--message.jg\\:alert--message__variant--filled.jg\\:alert--message__severity--success {
    @apply text-green-700 dark:text-green-200;
  }

  .jg\\:alert--root.jg\\:alert--root__variant--outlined {
    @apply border;
  }
}
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.prefix\` and \`createOptions.mergeFn\`" 2`] = `
"@layer components {
  .jg\\:button {
    @apply rounded-full;
  }

  .jg\\:button.jg\\:button__intent--primary,
  .jg\\:button.jg\\:button__size--medium {
    @apply uppercase;
  }
}
"
`;

exports[`rollup writes cva and sva files "with \`createOptions.prefix\` and \`createOptions.mergeFn\`" 3`] = `
"@import "./alert.css";
@import "./button.css";
"
`;
